--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 build-src-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/
 build-src-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/
+build-src-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/
