--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 build-src-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/
 build-src-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/
 build-src-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/
+src/src.pro.user
+src/src.pro.user.86c3027
+src/src.pro.user.868ac35
+src/src.pro.user.7515ff5
+matchmatch_icon_original.png
