--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 build-src-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/
+build-src-Desktop_Qt_6_2_2_MinGW_64_bit-Release/
 build-src-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/
 build-src-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/
 src/src.pro.user
